aiops/aiops-rh-demo/ocp/ops-assistant/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ops-incident-assistant
  labels:
    app: ops-incident-assistant
spec:
  to:
    kind: Service
    name: ops-incident-assistant
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
